Dependencies upgraded